Designed Review Architecture of Tour App

--- a/config.env
+++ b/config.env
@@ -8,6 +8,7 @@ JWT_SECRET = badhgkejkbcbcrihriye-jfbkkhvcdvh
 
 //JSON WEB_TOKEN Expiry Day
 JWT_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES_IN = 90
 
 EMAIL_USERNAME=3e4260b8ce3b27
 EMAIL_PASSWORD=9fd2f34374c53f
