--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "node,express,mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
@@ -49,5 +51,8 @@
     "ndb": "^1.1.5",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.4"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
